--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -55,6 +55,8 @@
                         android:id="@+id/main_tv_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
                         android:text="幸运女神"
                         android:textColor="@color/white"
                         android:textSize="14dp" />
@@ -68,6 +70,8 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="10dp"
                     android:background="@drawable/btn_bg_bian"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:text="登录"
                     android:textColor="@color/white"
                     android:textSize="14dp" />
