--- a/app/src/main/res/layout/activity_todaycomplete_list.xml
+++ b/app/src/main/res/layout/activity_todaycomplete_list.xml
@@ -71,6 +71,11 @@
             android:textColor="@color/white" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/line_bg" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recy_today"
         android:layout_width="match_parent"
