--- a/afinal/src/main/res/values/color.xml
+++ b/afinal/src/main/res/values/color.xml
@@ -12,4 +12,5 @@
     <color name="bottom_pressed_lab">#00d8e2</color>
     <color name="textColor">#fff</color>
     <color name="red">#FF0000</color>
+    <color name="green">#42A004</color>
 </resources>
