--- a/app/src/main/res/layout/activity_pc_dd.xml
+++ b/app/src/main/res/layout/activity_pc_dd.xml
@@ -139,6 +139,7 @@
             android:layout_height="60dp">
 
             <LinearLayout
+                android:id="@+id/bottom_ll"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
