--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/total_rl"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -11,7 +11,8 @@
         android:id="@+id/iv"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_centerInParent="true"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/tv"
