--- a/app/src/main/res/layout/activity_kjresultlist.xml
+++ b/app/src/main/res/layout/activity_kjresultlist.xml
@@ -18,9 +18,34 @@
             app:left_iv="@mipmap/left_jian" />
 
         <LinearLayout
+            android:id="@+id/title_ll"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/border_et_white"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/select_tv"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:textSize="18sp" />
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="10dp"
+                android:src="@mipmap/ic_launcher" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/blue"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <TextView
