--- a/app/src/main/res/layout/item_today_complete.xml
+++ b/app/src/main/res/layout/item_today_complete.xml
@@ -23,6 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="beijing"
+                android:textSize="12sp"
                 android:textColor="@color/white" />
 
             <TextView
@@ -31,6 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:text="555"
+                android:textSize="12sp"
                 android:textColor="@color/white" />
 
             <TextView
@@ -39,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:text="2017"
+                android:textSize="10sp"
                 android:textColor="@color/white" />
 
         </LinearLayout>
@@ -54,6 +57,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center"
+
             android:orientation="vertical"
             android:padding="5dp">
 
@@ -62,6 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="beijing"
+                android:textSize="12sp"
                 android:textColor="@color/white" />
 
             <TextView
@@ -70,6 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:text="555"
+                android:textSize="12sp"
                 android:textColor="@color/white" />
 
         </LinearLayout>
@@ -87,6 +93,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="beijing"
+            android:textSize="12sp"
             android:textColor="@color/white" />
 
         <View
@@ -108,6 +115,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="beijing"
+                android:textSize="12sp"
                 android:textColor="@color/white" />
 
             <TextView
@@ -116,6 +124,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:text="555"
+                android:textSize="12sp"
                 android:textColor="@color/white" />
 
         </LinearLayout>
