--- a/app/src/main/res/layout/activity_kjresultlist.xml
+++ b/app/src/main/res/layout/activity_kjresultlist.xml
@@ -38,7 +38,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginRight="10dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@mipmap/down_jian" />
         </LinearLayout>
 
         <LinearLayout
