--- a/app/src/main/res/layout/item_jszd.xml
+++ b/app/src/main/res/layout/item_jszd.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,8 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="下注明细"
-            android:padding="5dp" />
+            android:padding="5dp"
+            android:text="下注明细" />
 
         <TextView
             android:id="@+id/item_jszd_xzje"
@@ -32,16 +33,30 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="下注金额"
-            android:padding="5dp" />
+            android:padding="5dp"
+            android:text="下注金额" />
 
-        <TextView
-            android:id="@+id/item_jszd_kyje"
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="可赢金额"
-            android:padding="5dp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/item_jszd_kyje"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="可赢金额" />
+
+            <Button
+                android:id="@+id/cx_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:text="撤销" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
