--- a/app/src/main/res/layout/activity_pc_dd.xml
+++ b/app/src/main/res/layout/activity_pc_dd.xml
@@ -92,9 +92,16 @@
 
             <TextView
                 android:id="@+id/next4_qi_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="00:00"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/yue_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="00:00"
                 android:textColor="@color/white" />
         </LinearLayout>
 
