--- a/app/src/main/res/layout/activity_pc_dd.xml
+++ b/app/src/main/res/layout/activity_pc_dd.xml
@@ -9,19 +9,52 @@
         android:background="@mipmap/bg2"
         android:orientation="vertical">
 
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true" />
-
-        <net.tsz.afinal.view.TitleBar
-            android:id="@+id/title_bar"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:left_iv="@mipmap/left_jian"
-            app:right_iv="@mipmap/caidan_san" />
+            android:layout_height="50dp"
+            android:orientation="horizontal">
 
+            <LinearLayout
+                android:id="@+id/left_ll"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/title_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:text="赛车"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:padding="12dp"
+                    android:src="@mipmap/right_back" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/yue_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="￥88888888888888"
+                android:textColor="@color/white" />
+
+
+            <ImageView
+                android:id="@+id/right99_iv"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:clickable="true"
+                android:padding="14dp"
+                android:src="@mipmap/caidan_san" />
+        </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
@@ -49,10 +82,6 @@
                 android:numColumns="10"></GridView>
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/white" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -72,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="封盘:"
+                android:text="封盘："
                 android:textColor="@color/white" />
 
             <TextView
@@ -98,11 +127,6 @@
                 android:text="00:00"
                 android:textColor="@color/white" />
 
-            <TextView
-                android:id="@+id/yue_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white" />
         </LinearLayout>
 
         <View
@@ -243,6 +267,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/tm_pressed_color"
+                android:gravity="center"
+                android:text="封盘中"
+                android:textColor="@color/white"
+                android:textSize="22sp"
                 android:visibility="gone" />
         </RelativeLayout>
     </LinearLayout>
