--- a/app/src/main/res/layout/activity_jszdlist.xml
+++ b/app/src/main/res/layout/activity_jszdlist.xml
@@ -81,14 +81,26 @@
             android:padding="10dp">
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="9"
+                android:layout_weight="5"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:text="总下注金额："/>
             <TextView
                 android:id="@+id/jszd_allmoney"
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="5"
+                android:layout_height="wrap_content"
+                android:textColor="@color/green"
+                android:text="0"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="总输赢："/>
+            <TextView
+                android:id="@+id/jszd_symoney"
+                android:layout_width="0dp"
+                android:layout_weight="1.2"
                 android:layout_height="wrap_content"
                 android:textColor="@color/green"
                 android:text="0"/>
