--- a/app/src/main/res/layout/item_jszd.xml
+++ b/app/src/main/res/layout/item_jszd.xml
@@ -7,26 +7,65 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
-        <TextView
-            android:id="@+id/item_jszd_qh"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
-            android:padding="5dp"
-            android:text="期号" />
+            android:orientation="vertical"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/item_jszd_mz"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="期号" />
+            <TextView
+                android:id="@+id/item_jszd_qh"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="期号" />
+            <TextView
+                android:id="@+id/item_jszd_rq"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="期号" />
 
-        <TextView
-            android:id="@+id/item_jszd_xzmx"
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
+            android:orientation="vertical"
+            android:gravity="center">
+        <TextView
+            android:id="@+id/item_jszd_xzmx1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:padding="5dp"
             android:text="下注明细" />
-
+            <TextView
+                android:id="@+id/item_jszd_xzmx2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="下注明细" />
+            <TextView
+                android:id="@+id/item_jszd_xzmx3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="下注明细" />
+</LinearLayout>
         <TextView
             android:id="@+id/item_jszd_xzje"
             android:layout_width="0dp"
@@ -53,8 +92,9 @@
 
             <Button
                 android:id="@+id/cx_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="25dp"
+                android:textColor="@color/white"
                 android:background="@color/colorPrimary"
                 android:text="撤销" />
         </LinearLayout>
