--- a/app/src/main/res/layout/item_jszd.xml
+++ b/app/src/main/res/layout/item_jszd.xml
@@ -7,15 +7,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/item_jszd_mz"
                 android:layout_width="match_parent"
@@ -23,6 +24,7 @@
                 android:gravity="center"
                 android:padding="5dp"
                 android:text="期号" />
+
             <TextView
                 android:id="@+id/item_jszd_qh"
                 android:layout_width="match_parent"
@@ -30,6 +32,7 @@
                 android:gravity="center"
                 android:padding="5dp"
                 android:text="期号" />
+
             <TextView
                 android:id="@+id/item_jszd_rq"
                 android:layout_width="match_parent"
@@ -45,27 +48,34 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center">
-        <TextView
-            android:id="@+id/item_jszd_xzmx1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="下注明细" />
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/item_jszd_xzmx1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="下注明细" />
+
             <TextView
                 android:id="@+id/item_jszd_xzmx2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:padding="5dp"
                 android:text="下注明细" />
+
             <TextView
                 android:id="@+id/item_jszd_xzmx3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:padding="5dp"
                 android:text="下注明细" />
-</LinearLayout>
+        </LinearLayout>
+
         <TextView
             android:id="@+id/item_jszd_xzje"
             android:layout_width="0dp"
@@ -94,9 +104,9 @@
                 android:id="@+id/cx_btn"
                 android:layout_width="40dp"
                 android:layout_height="25dp"
-                android:textColor="@color/white"
                 android:background="@color/colorPrimary"
-                android:text="撤销" />
+                android:text="撤销"
+                android:textColor="@color/white" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
