--- a/app/src/main/res/layout/ac_type2.xml
+++ b/app/src/main/res/layout/ac_type2.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:visibility="gone"
+        app:tabMode="scrollable" />
 
     <TextView
         android:id="@+id/ty2_title"
         style="@style/type1_lab"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:gravity="center"/>
+        android:gravity="center" />
 
     <GridView
         android:id="@+id/ty2_top_gv"
