--- a/app/src/main/res/layout/activity_lhc.xml
+++ b/app/src/main/res/layout/activity_lhc.xml
@@ -9,31 +9,70 @@
         android:background="@mipmap/bg2"
         android:orientation="vertical">
 
-        <net.tsz.afinal.view.TitleBar
-            android:id="@+id/title_bar"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:center_tv="北京赛车"
-            app:left_iv="@mipmap/ic_launcher"
-            app:right_iv="@mipmap/ic_launcher" />
+            android:layout_height="50dp"
+            android:orientation="horizontal">
 
+            <LinearLayout
+                android:id="@+id/left_ll"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/title_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:text="赛车"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:padding="12dp"
+                    android:src="@mipmap/right_back" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/yue_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="￥88888888888888"
+                android:textColor="@color/white" />
+
+
+            <ImageView
+                android:id="@+id/right99_iv"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:clickable="true"
+                android:padding="14dp"
+                android:src="@mipmap/caidan_san" />
+        </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="@color/white" />
 
         <LinearLayout
+            android:id="@+id/old_qi_ll"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="10dp">
+            android:paddingLeft="10dp"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/top_qi_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1234567期"
                 android:textColor="@color/white" />
 
             <GridView
@@ -43,10 +82,6 @@
                 android:numColumns="10"></GridView>
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/white" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,7 +94,6 @@
                 android:id="@+id/next_qi_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1234567期"
                 android:textColor="@color/white" />
 
             <TextView
@@ -67,30 +101,38 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="封盘:"
+                android:text="封盘："
                 android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/next2_qi_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="00:15"
+                android:text="00:00"
                 android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/next3_qi_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:text="开奖："
                 android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/next4_qi_tv"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="00:45"
+                android:layout_weight="1"
+                android:text="00:00"
                 android:textColor="@color/white" />
+
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/white" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -110,7 +152,8 @@
 
             <include
                 android:id="@+id/ty1"
-                layout="@layout/ac_lhc_type1" />
+                layout="@layout/ac_type1"
+                android:visibility="gone" />
 
             <include
                 android:id="@+id/ty2"
@@ -124,9 +167,10 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="60dp">
 
             <LinearLayout
+                android:id="@+id/bottom_ll"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
@@ -141,61 +185,92 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="5dp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="已选" />
+                            android:text="已选"
+                            android:textSize="12dp" />
 
                         <TextView
                             android:id="@+id/zhu_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="0" />
+                            android:text="0"
+                            android:textColor="@color/yellow"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="注" />
+                            android:text="注"
+                            android:textSize="12dp" />
                     </LinearLayout>
 
                     <EditText
+                        android:id="@+id/tz_et"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="投注额" />
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="5dp"
+                        android:background="@drawable/edit_tm_bg"
+                        android:hint="投注额"
+                        android:inputType="number" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingBottom="7dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="7dp">
 
                     <Button
                         android:id="@+id/left_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="下注" />
+                        android:background="@drawable/btn_bg_ups"
+
+                        android:text="下注"
+                        android:textColor="@color/white" />
 
                     <Button
                         android:id="@+id/center_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="A盘" />
+                        android:layout_marginLeft="5dp"
+                        android:background="@drawable/btn_bg_up"
+
+                        android:text="A盘√"
+                        android:textColor="@color/white" />
 
                     <Button
                         android:id="@+id/right_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="B盘" />
+                        android:layout_marginLeft="5dp"
+                        android:background="@drawable/btn_bg_ups"
+
+                        android:text="B盘"
+                        android:textColor="@color/white" />
                 </LinearLayout>
             </LinearLayout>
 
             <TextView
+                android:id="@+id/fp_tv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorPrimary"
+                android:background="@color/tm_pressed_color"
+                android:gravity="center"
+                android:text="封盘中"
+                android:textColor="@color/white"
+                android:textSize="22sp"
                 android:visibility="gone" />
         </RelativeLayout>
     </LinearLayout>
