抽奖接口对接 六合功能梳理

--- a/app/src/main/res/layout/activity_jszdlist.xml
+++ b/app/src/main/res/layout/activity_jszdlist.xml
@@ -82,9 +82,8 @@
             android:padding="10dp">
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="5"
                 android:gravity="right"
                 android:text="总下注金额：" />
 
@@ -92,7 +91,7 @@
                 android:id="@+id/jszd_allmoney"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="5"
+                android:layout_weight="1"
                 android:text="0"
                 android:textColor="@color/green" />
 
@@ -106,7 +105,7 @@
                 android:id="@+id/jszd_symoney"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1"
                 android:text="0"
                 android:textColor="@color/green" />
         </LinearLayout>
