--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/iv"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_centerInParent="true"
         android:gravity="center" />
 
@@ -18,5 +18,7 @@
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center" />
+        android:layout_centerInParent="true"
+        android:text="12sp"
+        android:textColor="@color/black" />
 </RelativeLayout>
