--- a/app/src/main/res/layout/activity_js_gb.xml
+++ b/app/src/main/res/layout/activity_js_gb.xml
@@ -212,6 +212,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="已选"
+                            android:textColor="@color/white"
                             android:textSize="12dp" />
 
                         <TextView
@@ -226,6 +227,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="注"
+                            android:textColor="@color/white"
                             android:textSize="12dp" />
                     </LinearLayout>
 
@@ -237,6 +239,10 @@
                         android:layout_marginLeft="5dp"
                         android:background="@drawable/edit_tm_bg"
                         android:hint="投注额"
+                        android:textSize="12sp"
+                        android:padding="5dp"
+                        android:textColorHint="@color/white"
+                        android:textColor="@color/white"
                         android:inputType="number" />
                 </LinearLayout>
 
