--- a/app/src/main/res/layout/activity_lhc.xml
+++ b/app/src/main/res/layout/activity_lhc.xml
@@ -193,7 +193,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="已选"
-                            android:textSize="12dp" />
+                            android:textColor="@color/white"
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/zhu_tv"
@@ -207,7 +208,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="注"
-                            android:textSize="12dp" />
+                            android:textColor="@color/white"
+                            android:textSize="12sp" />
                     </LinearLayout>
 
                     <EditText
@@ -218,6 +220,10 @@
                         android:layout_marginLeft="5dp"
                         android:background="@drawable/edit_tm_bg"
                         android:hint="投注额"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/white"
+                        android:textSize="12sp"
+                        android:padding="5dp"
                         android:inputType="number" />
                 </LinearLayout>
 
