--- a/app/src/main/res/layout/frag_draw_list.xml
+++ b/app/src/main/res/layout/frag_draw_list.xml
@@ -56,6 +56,7 @@
         <ListView
             android:id="@+id/main_lv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></ListView>
+            android:layout_height="match_parent"
+            android:paddingBottom="20dp"></ListView>
     </LinearLayout>
 </layout>
